--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           github_user_name: marcogd0
           svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: dist/ocean.gif?color_snake=orange
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
